parserfiles/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> BROADCAST
Rule 1     BROADCAST -> FORMULA
Rule 2     BROADCAST -> LBROADCAST FORMULA RBROADCAST FORMULA
Rule 3     FORMULA -> SYMBOL
Rule 4     FORMULA -> FORMULA IMPLIES FORMULA
Rule 5     FORMULA -> FORMULA OR FORMULA
Rule 6     FORMULA -> FORMULA AND FORMULA
Rule 7     FORMULA -> NOT FORMULA
Rule 8     FORMULA -> NECESSARY FORMULA
Rule 9     FORMULA -> POSSIBLE FORMULA
Rule 10    FORMULA -> MODAL FORMULA
Rule 11    FORMULA -> LPARENTESIS FORMULA RPARENTESIS
Rule 12    MODAL -> LNECESSARY SYMBOL RNECESSARY
Rule 13    MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE

Terminals, with rules where they appear

AND                  : 6
IMPLIES              : 4
LBROADCAST           : 2
LNECESSARY           : 12
LPARENTESIS          : 11
LPOSSIBLE            : 13
NECESSARY            : 8
NOT                  : 7
OR                   : 5
POSSIBLE             : 9
RBROADCAST           : 2
RNECESSARY           : 12
RPARENTESIS          : 11
RPOSSIBLE            : 13
SYMBOL               : 3 12 13
error                : 

Nonterminals, with rules where they appear

BROADCAST            : 0
FORMULA              : 1 2 2 4 4 5 5 6 6 7 8 9 10 11
MODAL                : 10

Parsing method: LALR

state 0

    (0) S' -> . BROADCAST
    (1) BROADCAST -> . FORMULA
    (2) BROADCAST -> . LBROADCAST FORMULA RBROADCAST FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    LBROADCAST      shift and go to state 3
    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    BROADCAST                      shift and go to state 1
    FORMULA                        shift and go to state 2
    MODAL                          shift and go to state 8

state 1

    (0) S' -> BROADCAST .



state 2

    (1) BROADCAST -> FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    $end            reduce using rule 1 (BROADCAST -> FORMULA .)
    IMPLIES         shift and go to state 12
    OR              shift and go to state 13
    AND             shift and go to state 14


state 3

    (2) BROADCAST -> LBROADCAST . FORMULA RBROADCAST FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 15
    MODAL                          shift and go to state 8

state 4

    (3) FORMULA -> SYMBOL .

    IMPLIES         reduce using rule 3 (FORMULA -> SYMBOL .)
    OR              reduce using rule 3 (FORMULA -> SYMBOL .)
    AND             reduce using rule 3 (FORMULA -> SYMBOL .)
    $end            reduce using rule 3 (FORMULA -> SYMBOL .)
    RBROADCAST      reduce using rule 3 (FORMULA -> SYMBOL .)
    RPARENTESIS     reduce using rule 3 (FORMULA -> SYMBOL .)


state 5

    (7) FORMULA -> NOT . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 16
    MODAL                          shift and go to state 8

state 6

    (8) FORMULA -> NECESSARY . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 17
    MODAL                          shift and go to state 8

state 7

    (9) FORMULA -> POSSIBLE . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 18
    MODAL                          shift and go to state 8

state 8

    (10) FORMULA -> MODAL . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    MODAL                          shift and go to state 8
    FORMULA                        shift and go to state 19

state 9

    (11) FORMULA -> LPARENTESIS . FORMULA RPARENTESIS
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 20
    MODAL                          shift and go to state 8

state 10

    (12) MODAL -> LNECESSARY . SYMBOL RNECESSARY

    SYMBOL          shift and go to state 21


state 11

    (13) MODAL -> LPOSSIBLE . SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 22


state 12

    (4) FORMULA -> FORMULA IMPLIES . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 23
    MODAL                          shift and go to state 8

state 13

    (5) FORMULA -> FORMULA OR . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 24
    MODAL                          shift and go to state 8

state 14

    (6) FORMULA -> FORMULA AND . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 25
    MODAL                          shift and go to state 8

state 15

    (2) BROADCAST -> LBROADCAST FORMULA . RBROADCAST FORMULA
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    RBROADCAST      shift and go to state 26
    IMPLIES         shift and go to state 12
    OR              shift and go to state 13
    AND             shift and go to state 14


state 16

    (7) FORMULA -> NOT FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    IMPLIES         reduce using rule 7 (FORMULA -> NOT FORMULA .)
    OR              reduce using rule 7 (FORMULA -> NOT FORMULA .)
    AND             reduce using rule 7 (FORMULA -> NOT FORMULA .)
    $end            reduce using rule 7 (FORMULA -> NOT FORMULA .)
    RBROADCAST      reduce using rule 7 (FORMULA -> NOT FORMULA .)
    RPARENTESIS     reduce using rule 7 (FORMULA -> NOT FORMULA .)

  ! IMPLIES         [ shift and go to state 12 ]
  ! OR              [ shift and go to state 13 ]
  ! AND             [ shift and go to state 14 ]


state 17

    (8) FORMULA -> NECESSARY FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    IMPLIES         reduce using rule 8 (FORMULA -> NECESSARY FORMULA .)
    OR              reduce using rule 8 (FORMULA -> NECESSARY FORMULA .)
    AND             reduce using rule 8 (FORMULA -> NECESSARY FORMULA .)
    $end            reduce using rule 8 (FORMULA -> NECESSARY FORMULA .)
    RBROADCAST      reduce using rule 8 (FORMULA -> NECESSARY FORMULA .)
    RPARENTESIS     reduce using rule 8 (FORMULA -> NECESSARY FORMULA .)

  ! IMPLIES         [ shift and go to state 12 ]
  ! OR              [ shift and go to state 13 ]
  ! AND             [ shift and go to state 14 ]


state 18

    (9) FORMULA -> POSSIBLE FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    IMPLIES         reduce using rule 9 (FORMULA -> POSSIBLE FORMULA .)
    OR              reduce using rule 9 (FORMULA -> POSSIBLE FORMULA .)
    AND             reduce using rule 9 (FORMULA -> POSSIBLE FORMULA .)
    $end            reduce using rule 9 (FORMULA -> POSSIBLE FORMULA .)
    RBROADCAST      reduce using rule 9 (FORMULA -> POSSIBLE FORMULA .)
    RPARENTESIS     reduce using rule 9 (FORMULA -> POSSIBLE FORMULA .)

  ! IMPLIES         [ shift and go to state 12 ]
  ! OR              [ shift and go to state 13 ]
  ! AND             [ shift and go to state 14 ]


state 19

    (10) FORMULA -> MODAL FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

  ! shift/reduce conflict for IMPLIES resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    $end            reduce using rule 10 (FORMULA -> MODAL FORMULA .)
    RBROADCAST      reduce using rule 10 (FORMULA -> MODAL FORMULA .)
    RPARENTESIS     reduce using rule 10 (FORMULA -> MODAL FORMULA .)
    IMPLIES         shift and go to state 12
    OR              shift and go to state 13
    AND             shift and go to state 14

  ! IMPLIES         [ reduce using rule 10 (FORMULA -> MODAL FORMULA .) ]
  ! OR              [ reduce using rule 10 (FORMULA -> MODAL FORMULA .) ]
  ! AND             [ reduce using rule 10 (FORMULA -> MODAL FORMULA .) ]


state 20

    (11) FORMULA -> LPARENTESIS FORMULA . RPARENTESIS
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    RPARENTESIS     shift and go to state 27
    IMPLIES         shift and go to state 12
    OR              shift and go to state 13
    AND             shift and go to state 14


state 21

    (12) MODAL -> LNECESSARY SYMBOL . RNECESSARY

    RNECESSARY      shift and go to state 28


state 22

    (13) MODAL -> LPOSSIBLE SYMBOL . RPOSSIBLE

    RPOSSIBLE       shift and go to state 29


state 23

    (4) FORMULA -> FORMULA IMPLIES FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    $end            reduce using rule 4 (FORMULA -> FORMULA IMPLIES FORMULA .)
    RBROADCAST      reduce using rule 4 (FORMULA -> FORMULA IMPLIES FORMULA .)
    RPARENTESIS     reduce using rule 4 (FORMULA -> FORMULA IMPLIES FORMULA .)
    IMPLIES         shift and go to state 12
    OR              shift and go to state 13
    AND             shift and go to state 14

  ! IMPLIES         [ reduce using rule 4 (FORMULA -> FORMULA IMPLIES FORMULA .) ]
  ! OR              [ reduce using rule 4 (FORMULA -> FORMULA IMPLIES FORMULA .) ]
  ! AND             [ reduce using rule 4 (FORMULA -> FORMULA IMPLIES FORMULA .) ]


state 24

    (5) FORMULA -> FORMULA OR FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    IMPLIES         reduce using rule 5 (FORMULA -> FORMULA OR FORMULA .)
    OR              reduce using rule 5 (FORMULA -> FORMULA OR FORMULA .)
    $end            reduce using rule 5 (FORMULA -> FORMULA OR FORMULA .)
    RBROADCAST      reduce using rule 5 (FORMULA -> FORMULA OR FORMULA .)
    RPARENTESIS     reduce using rule 5 (FORMULA -> FORMULA OR FORMULA .)
    AND             shift and go to state 14

  ! AND             [ reduce using rule 5 (FORMULA -> FORMULA OR FORMULA .) ]
  ! IMPLIES         [ shift and go to state 12 ]
  ! OR              [ shift and go to state 13 ]


state 25

    (6) FORMULA -> FORMULA AND FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    IMPLIES         reduce using rule 6 (FORMULA -> FORMULA AND FORMULA .)
    OR              reduce using rule 6 (FORMULA -> FORMULA AND FORMULA .)
    AND             reduce using rule 6 (FORMULA -> FORMULA AND FORMULA .)
    $end            reduce using rule 6 (FORMULA -> FORMULA AND FORMULA .)
    RBROADCAST      reduce using rule 6 (FORMULA -> FORMULA AND FORMULA .)
    RPARENTESIS     reduce using rule 6 (FORMULA -> FORMULA AND FORMULA .)

  ! IMPLIES         [ shift and go to state 12 ]
  ! OR              [ shift and go to state 13 ]
  ! AND             [ shift and go to state 14 ]


state 26

    (2) BROADCAST -> LBROADCAST FORMULA RBROADCAST . FORMULA
    (3) FORMULA -> . SYMBOL
    (4) FORMULA -> . FORMULA IMPLIES FORMULA
    (5) FORMULA -> . FORMULA OR FORMULA
    (6) FORMULA -> . FORMULA AND FORMULA
    (7) FORMULA -> . NOT FORMULA
    (8) FORMULA -> . NECESSARY FORMULA
    (9) FORMULA -> . POSSIBLE FORMULA
    (10) FORMULA -> . MODAL FORMULA
    (11) FORMULA -> . LPARENTESIS FORMULA RPARENTESIS
    (12) MODAL -> . LNECESSARY SYMBOL RNECESSARY
    (13) MODAL -> . LPOSSIBLE SYMBOL RPOSSIBLE

    SYMBOL          shift and go to state 4
    NOT             shift and go to state 5
    NECESSARY       shift and go to state 6
    POSSIBLE        shift and go to state 7
    LPARENTESIS     shift and go to state 9
    LNECESSARY      shift and go to state 10
    LPOSSIBLE       shift and go to state 11

    FORMULA                        shift and go to state 30
    MODAL                          shift and go to state 8

state 27

    (11) FORMULA -> LPARENTESIS FORMULA RPARENTESIS .

    IMPLIES         reduce using rule 11 (FORMULA -> LPARENTESIS FORMULA RPARENTESIS .)
    OR              reduce using rule 11 (FORMULA -> LPARENTESIS FORMULA RPARENTESIS .)
    AND             reduce using rule 11 (FORMULA -> LPARENTESIS FORMULA RPARENTESIS .)
    $end            reduce using rule 11 (FORMULA -> LPARENTESIS FORMULA RPARENTESIS .)
    RBROADCAST      reduce using rule 11 (FORMULA -> LPARENTESIS FORMULA RPARENTESIS .)
    RPARENTESIS     reduce using rule 11 (FORMULA -> LPARENTESIS FORMULA RPARENTESIS .)


state 28

    (12) MODAL -> LNECESSARY SYMBOL RNECESSARY .

    SYMBOL          reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)
    NOT             reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)
    NECESSARY       reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)
    POSSIBLE        reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)
    LPARENTESIS     reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)
    LNECESSARY      reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)
    LPOSSIBLE       reduce using rule 12 (MODAL -> LNECESSARY SYMBOL RNECESSARY .)


state 29

    (13) MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .

    SYMBOL          reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)
    NOT             reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)
    NECESSARY       reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)
    POSSIBLE        reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)
    LPARENTESIS     reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)
    LNECESSARY      reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)
    LPOSSIBLE       reduce using rule 13 (MODAL -> LPOSSIBLE SYMBOL RPOSSIBLE .)


state 30

    (2) BROADCAST -> LBROADCAST FORMULA RBROADCAST FORMULA .
    (4) FORMULA -> FORMULA . IMPLIES FORMULA
    (5) FORMULA -> FORMULA . OR FORMULA
    (6) FORMULA -> FORMULA . AND FORMULA

    $end            reduce using rule 2 (BROADCAST -> LBROADCAST FORMULA RBROADCAST FORMULA .)
    IMPLIES         shift and go to state 12
    OR              shift and go to state 13
    AND             shift and go to state 14

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for IMPLIES in state 19 resolved as shift
WARNING: shift/reduce conflict for OR in state 19 resolved as shift
WARNING: shift/reduce conflict for AND in state 19 resolved as shift
